--- a/Concentration/Base.lproj/Main.storyboard
+++ b/Concentration/Base.lproj/Main.storyboard
@@ -16,20 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4c-pd-CGT">
-                                <rect key="frame" x="125" y="618" width="164" height="76"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="New Game">
-                                    <color key="titleColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="touchNewGameButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Xp-pm-CNy"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flips: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiA-dY-9el">
-                                <rect key="frame" x="166.5" y="763.5" width="81.5" height="31.5"/>
+                                <rect key="frame" x="166.5" y="800" width="81.5" height="31.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -150,14 +138,29 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4c-pd-CGT">
+                                <rect key="frame" x="135.5" y="696" width="143" height="48"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="New Game">
+                                    <color key="titleColor" systemColor="systemOrangeColor" red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchNewGameButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Xp-pm-CNy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="DiA-dY-9el" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="AcV-Ek-765"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DiA-dY-9el" secondAttribute="bottom" constant="30.5" id="4ZC-3L-Abe"/>
                             <constraint firstItem="zCn-OW-b8p" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="I0l-Vt-QIS"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DiA-dY-9el" secondAttribute="bottom" constant="67" id="cNn-PJ-Luc"/>
+                            <constraint firstItem="N4c-pd-CGT" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zCn-OW-b8p" secondAttribute="bottom" constant="8" symbolic="YES" id="QAB-Pi-A0j"/>
+                            <constraint firstItem="N4c-pd-CGT" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UmQ-UP-Ue8"/>
+                            <constraint firstItem="DiA-dY-9el" firstAttribute="top" secondItem="N4c-pd-CGT" secondAttribute="bottom" constant="56" id="XBE-VL-1g7"/>
+                            <constraint firstItem="DiA-dY-9el" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="apK-4c-0XA"/>
                             <constraint firstItem="zCn-OW-b8p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eGN-E4-7QR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zCn-OW-b8p" secondAttribute="trailing" constant="16" id="kcN-o4-Myt"/>
+                            <constraint firstItem="DiA-dY-9el" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="vH4-Ok-CRx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
